    options are provided.  (Closes: #679374)
  * dscverify: Use GetOptions to handle argument parsing.  (Closes: #679148)
  * uscan: Properly use the File::Temp interface so files aren't being created
    with the stringified version of a file glob.  (Closes: #678193)
  * rc-alert: Unset wget's continue option to ensure the bug list is properly
    downloaded.  (Closes: #677229)

 -- Benjamin Drung <bdrung@debian.org>  Sun, 17 Jun 2012 23:33:41 +0200

devscripts (2.11.9) unstable; urgency=low

  [ David Prévot ]
  * French translation update.

  [ Ron Lee ]
  * cowpoke: Properly strip the arguments to dpkg --compare-versions

  [ Christoph Berg ]
  * debcheckout: Also recognize bzr+ssh:// schema.

  [ Bernhard R. Link ]
  * debchange: fix NMU detection to not NMU QA packages (Closes: #676881)

  [ James McCoy ]
  * debchange: Add more documentation about the effects of changelog
    heuristic.  (Closes: #673974)
  * mk-build-deps:
    + Provide a more descriptive README.Debian for generated packages.  Thanks
      to chrysn for the patch.  (Closes: #675337)
    + Do not install Recommends by default.  (Closes: #575245)

  [ Benjamin Drung ]
  * debchange: Use the Dpkg::Vendor Perl API directly to avoid the overhead
    of the command line dpkg-vendor script.
  * Use dpkg-buildflags for C code.
  * wrap-and-sort: Fix damaging debian/install with no newline at the
    end of file (LP: #1014365).

 -- Benjamin Drung <bdrung@debian.org>  Sun, 17 Jun 2012 22:56:26 +0200

devscripts (2.11.8) unstable; urgency=low

  [ David Prévot ]
  * French translation update.

  [ James McCoy ]
  * dd-list:
    + Recognize -h argument, as documented.
    + Don't error when given multiple binary packages from the same source.
      (Closes: #672309)
  * Also note DEBCHANGE_MAINTTRAILER change in NEWS entry for 2.11.7.
    (Closes: #672973)
  * dget:
    + Fix handling of sources.list entries with a port. (Closes: #672460) Still