@@ -15,6 +15,8 @@ devscripts (2.11.10) UNRELEASED; urgency=low
     with the stringified version of a file glob.  (Closes: #678193)
   * rc-alert: Unset wget's continue option to ensure the bug list is properly
     downloaded.  (Closes: #677229)
+  * Devscripts/Packages.pm, Devscripts/PackageDeps.pm: Parse dpkg's status
+    file using Dpkg::Control.
 
  -- Benjamin Drung <bdrung@debian.org>  Sun, 17 Jun 2012 23:33:41 +0200
 
